--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -217,24 +217,50 @@ In this example we see a highly significant enrichment of *de novo* lof variants
 ##Getting help
 Help on any of the functions described is available using the standard R help functions, e.g. `help(denovolyze)` or `?denovolyze`.  Additional details are also available in the package vignette, accessed using `vignette("denovolyzeR_intro")`.
 
-
-##REAGENTS AND SOLUTIONS
-not applicable
+_____
 
 ##COMMENTARY
+
 ####Background Information  
+We need to put something here.
+Could put some more info on the model here, with maybe a figure?
+Or the underlying poisson stats?
 
 ####Critical Parameters   
+expectedDNMs
+choice of probability table
+
 ####Troubleshooting  
+Leave blank
+
 ####Anticipated Results  
+Leave blank
+
 ####Time Considerations  
+These analyses are not especially computationally intensive, and will run on a desktop of laptop computer in seconds.  The `denovolyzeMultiHits` function uses permutation, and computation time increases linearly with the number of permutations.  Elapsed times (in seconds) to run the three principal functions on *de novo* variants from 1078 samples, using defaut settings, on a MacBook Air (1.7GHz i7, 8Gb RAM) are as follows:
+```{r}
+system.time(denovolyzeByClass(dnm.genes=autismDeNovos$gene,dnm.class=autismDeNovos$dnmClass,nsamples=1078))["elapsed"]
+system.time(denovolyzeMultiHits(dnm.genes=autismDeNovos$gene,dnm.class=autismDeNovos$dnmClass,nsamples=1078,nperms=1000))["elapsed"]
+system.time(denovolyzeByGene(dnm.genes=autismDeNovos$gene,dnm.class=autismDeNovos$dnmClass,nsamples=1078))["elapsed"]
+```
 
 
+##ACKNOWLEDGEMENT
+JSW is supported by the NIHR Biomedical Research Unit in Cardiovascular Disease at Royal Brompton
+& Harefield NHS Foundation Trust and Imperial College London, Academy of Medical Sciences, Wellcome Trust, British Heart Foundation Arthritis Research UK, Fondation Leducq, and  an HICF award from Wellcome Trust and Department of Health.  
+**Acknowledge DM / CES/ JGS?**  
+**Any developers / contributors?**  
 
-##ACKNOWLEDGEMENT (if applicable)
 ##LITERATURE CITED
+
 ##KEY REFERENCE (optional)
+Samocha 2014?
+
 ##INTERNET RESOURCES (optional)
+
+http://www.r-project.org/  
+http://denovolyzer.org/  
+http://jamesware.github.io/denovolyzeR/  
 
 ##FIGURE LEGENDS
 
@@ -242,8 +268,8 @@ not applicable
 na
 
 
-
-  		___________________________________
+_____
+  	
 Additional instructions:
 The following should be submitted as individual files, NOT as part of the main document:
 •	Figures
@@ -253,12 +279,22 @@ The following should be submitted as individual files, NOT as part of the main d
 If you have any questions about your manuscript, or formatting, or submitting it, consult the Contributor’s Style Guide (For Authors page) or contact the Developmental Editor listed for your title.
 For questions about our submissions site (ScholarOne Manuscripts), your Contributor Agreement, or copyright permissions, please contact our Editorial Program Coordinator at cpsubmissions@wiley.com. 
 
+-----
 
 #NOTES TO SELF
 
 Will need to define abbreviations (lof etc) somewhere
 
-Should I describe other aspects
+Should I describe other aspects:
 
-viewProbabilityTables()
-custom probability tables (need to put some on github if so)
+- viewProbabilityTables()
+- custom probability tables (need to put some on github if so)
+
+list all arguments as an appendix or support protocol?
+
+- gene.id
+- signif.p
+- round.expected
+
+Get rid of warning (a bug)
+"Warning: joining factors with different levels, coercing to character"
